    work even after you move the Z: drive. (Wengier)
  - Enhanced the config option "freesizecap" to allow
    the setting "fixed" which is the same as "false",
    and a new setting "relative" is added, which will
    be similar to the setting "fixed" but the reported
    free disk size will also change relative to the
    change of the free disk size ever since. (Wengier)
  - Added new CPU types to the "Emulate CPU speed" menu
    group, namely 486DX4-100, 486DX5-133, Pentium-75,
    and Pentium-90. Thanks again for the data provided
    by the user maximus105. (Wengier)
  - You can now select a special key (e.g. Alt+Tab,
    Ctrl+Break, Ctrl+Alt+Del, etc) to be sent from the
    key defined in the mapper editor. The key can be
    selected (Ctrl+Alt+Del by default) from the "Send
    special key" menu group in "Main" menu. (Wengier)
  - Added full Ctrl+Break emulation at the BIOS and
    DOS level, updated console emulation to match.
    The "Pause" mapper shortcut is now moved to
    HOST[F11/F12]+Pause instead of Ctrl+Pause so that
    Ctrl+Break can work properly for users, and the
    function to send the Ctrl+Break key from the menu
    ("Send special key" under "Main") is added. Also,
    the PC-98 STOP key now functions the same as the
    Ctrl+C and Ctrl+Break keys in IBM PC mode.
  - The mouse copy/paste feature is now available for
    non-Windows systems on SDL2 builds. Also, pasting
    from the clipboard with a mapped shortcut is also
    available for Linux/X11 on SDL1 builds. (Wengier)
  - Added "Use US keyboard layout" toggle menu item in
    the "PC-98" menu group under "Video" to select
    whether to force the default US keyboard layout in
    PC-98 mode, same as the "pc-98 force ibm keyboard
    layout" config option in [pc98] section. Also moved
    the "PC-98 PIT master clock" options from the "DOS"
    menu to this menu group. (Wengier)
  - Implemented the x86 dynamic core for both 32-bit