@@ -440,7 +440,7 @@ void MenuMountDrive(char drive, const char drive2[DOS_PATHLENGTH]) {
 }
 #endif
 
-void MenuBrowseImageFile(char drive, bool boot) {
+void MenuBrowseImageFile(char drive, bool boot, bool multiple) {
 	std::string str(1, drive);
 	std::string drive_warn;
 	if (Drives[drive-'A']&&!boot) {
@@ -464,28 +464,47 @@ void MenuBrowseImageFile(char drive, bool boot) {
     getcwd(Temp_CurrentDir, 512);
     const char *lFilterPatterns[] = {"*.ima","*.img","*.vhd","*.hdi","*.iso","*.cue","*.bin","*.mdf","*.zip","*.7z","*.IMA","*.IMG","*.VHD","*.HDI","*.ISO","*.CUE","*.BIN","*.MDF","*.ZIP","*.7Z"};
     const char *lFilterDescription = "Image/Zip files (*.ima, *.img, *.vhd, *.hdi, *.iso, *.cue, *.bin, *.mdf, *.zip, *.7z)";
-    char const * lTheOpenFileName = tinyfd_openFileDialog(("Select an image file for Drive "+str+":").c_str(),"",20,lFilterPatterns,lFilterDescription,0);
+    char const * lTheOpenFileName = tinyfd_openFileDialog(((multiple?"Select image file(s) for Drive ":"Select an image file for Drive ")+str+":").c_str(),"",20,lFilterPatterns,lFilterDescription,multiple?1:0);
+    std::string files="";
+    if (multiple&&lTheOpenFileName) {
+        files += "\"";
+        for (int i=0; i<strlen(lTheOpenFileName); i++)
+            files += lTheOpenFileName[i]=='|'?"\" \"":std::string(1,lTheOpenFileName[i]);
+        files += "\" ";
+    }
+    while (multiple&&lTheOpenFileName&&tinyfd_messageBox("Mount image files","Do you want to mount more image file(s)?","yesno", "question", 1)) {
+        lTheOpenFileName = tinyfd_openFileDialog(("Select image file(s) for Drive "+str+":").c_str(),"",20,lFilterPatterns,lFilterDescription,multiple?1:0);
+        if (lTheOpenFileName) {
+            files += "\"";
+            for (int i=0; i<strlen(lTheOpenFileName); i++)
+                files += lTheOpenFileName[i]=='|'?"\" \"":std::string(1,lTheOpenFileName[i]);
+            files += "\" ";
+        }
+    }
 
-	if (lTheOpenFileName) {
-        char ext[5] = "";
-        if (strlen(lTheOpenFileName)>4)
-            strcpy(ext, lTheOpenFileName+strlen(lTheOpenFileName)-4);
-		char type[15];
-		if(!strcasecmp(ext,".ima"))
-			strcpy(type,"-t floppy ");
-		else if((!strcasecmp(ext,".iso")) || (!strcasecmp(ext,".cue")) || (!strcasecmp(ext,".bin")) || (!strcasecmp(ext,".mdf")))
-			strcpy(type,"-t iso ");
-		else
-			strcpy(type,"");
+	if (lTheOpenFileName||files.size()) {
+        char type[15];
+        if (!files.size()) {
+            char ext[5] = "";
+            if (strlen(lTheOpenFileName)>4)
+                strcpy(ext, lTheOpenFileName+strlen(lTheOpenFileName)-4);
+            if(!strcasecmp(ext,".ima"))
+                strcpy(type,"-t floppy ");
+            else if((!strcasecmp(ext,".iso")) || (!strcasecmp(ext,".cue")) || (!strcasecmp(ext,".bin")) || (!strcasecmp(ext,".mdf")))
+                strcpy(type,"-t iso ");
+            else
+                strcpy(type,"");
+        } else
+            *type=0;
 		char mountstring[DOS_PATHLENGTH+CROSS_LEN+20];
 		strcpy(mountstring,type);
 		char temp_str[3] = { 0,0,0 };
 		temp_str[0]=drive;
 		temp_str[1]=' ';
 		strcat(mountstring,temp_str);
-		strcat(mountstring,"\"");
-		strcat(mountstring,lTheOpenFileName);
-		strcat(mountstring,"\"");
+		if (!multiple) strcat(mountstring,"\"");
+		strcat(mountstring,files.size()?files.c_str():lTheOpenFileName);
+		if (!multiple) strcat(mountstring,"\"");
 		if (boot) strcat(mountstring," -U");
 		qmount=true;
 		runImgmount(mountstring);
@@ -501,6 +520,10 @@ void MenuBrowseImageFile(char drive, bool boot) {
 			runBoot(str);
 			std::string drive_warn="Drive "+std::string(1, drive)+": failed to boot.";
 			tinyfd_messageBox("Error",drive_warn.c_str(),"ok","error", 1);
+		} else if (multiple) {
+			tinyfd_messageBox("Information",("Mounted disk images to Drive "+std::string(1,drive)+":\n"+files).c_str(),"ok","info", 1);
+		} else {
+			tinyfd_messageBox("Information",("Mounted disk image to Drive "+std::string(1,drive)+":\n"+std::string(lTheOpenFileName)).c_str(),"ok","info", 1);
 		}
 	}
 	chdir( Temp_CurrentDir );
@@ -4251,7 +4274,7 @@ public:
         }
         else {
             if (paths.size() == 0) {
-                if (strcasecmp(temp_line.c_str(), "-u")) WriteOut(MSG_Get("PROGRAM_IMGMOUNT_SPECIFY_FILE"));
+                if (strcasecmp(temp_line.c_str(), "-u")&&!qmount) WriteOut(MSG_Get("PROGRAM_IMGMOUNT_SPECIFY_FILE"));
                 return; 
             }
 			if (!rtype&&!rfstype&&fstype!="none"&&paths[0].length()>4) {
@@ -4491,13 +4514,13 @@ private:
                     // convert dosbox-x filename to system filename
                     uint8_t dummy;
                     if (!DOS_MakeName(tmp, fullname, &dummy) || strncmp(Drives[dummy]->GetInfo(), "local directory", 15)) {
-                        WriteOut(MSG_Get(usedef?"PROGRAM_IMGMOUNT_DEFAULT_NOT_FOUND":"PROGRAM_IMGMOUNT_NON_LOCAL_DRIVE"));
+                        if (!qmount) WriteOut(MSG_Get(usedef?"PROGRAM_IMGMOUNT_DEFAULT_NOT_FOUND":"PROGRAM_IMGMOUNT_NON_LOCAL_DRIVE"));
                         return;
                     }
 
                     localDrive *ldp = dynamic_cast<localDrive*>(Drives[dummy]);
                     if (ldp == NULL) {
-                        WriteOut(MSG_Get(usedef?"PROGRAM_IMGMOUNT_DEFAULT_NOT_FOUND":"PROGRAM_IMGMOUNT_FILE_NOT_FOUND"));
+                        if (!qmount) WriteOut(MSG_Get(usedef?"PROGRAM_IMGMOUNT_DEFAULT_NOT_FOUND":"PROGRAM_IMGMOUNT_FILE_NOT_FOUND"));
                         return;
                     }
 					bool readonly=wpcolon&&commandLine.length()>1&&commandLine[0]==':';
@@ -4506,7 +4529,7 @@ private:
                     commandLine = tmp;
 
                     if (pref_stat(readonly?tmp+1:tmp, &test)) {
-                        WriteOut(MSG_Get(usedef?"PROGRAM_IMGMOUNT_DEFAULT_NOT_FOUND":"PROGRAM_IMGMOUNT_FILE_NOT_FOUND"));
+                        if (!qmount) WriteOut(MSG_Get(usedef?"PROGRAM_IMGMOUNT_DEFAULT_NOT_FOUND":"PROGRAM_IMGMOUNT_FILE_NOT_FOUND"));
                         return;
                     }
                 }
@@ -5046,7 +5069,7 @@ private:
         bool yet_detected = false, readonly = wpcolon&&strlen(fileName)>1&&fileName[0]==':';
         FILE * diskfile = fopen64(readonly?fileName+1:fileName, readonly||roflag?"rb":"rb+");
         if (!diskfile) {
-            WriteOut(MSG_Get("PROGRAM_IMGMOUNT_INVALID_IMAGE"));
+            if (!qmount) WriteOut(MSG_Get("PROGRAM_IMGMOUNT_INVALID_IMAGE"));
             return false;
         }
         fseeko64(diskfile, 0L, SEEK_END);
@@ -5056,7 +5079,7 @@ private:
         fseeko64(diskfile, -512, SEEK_CUR);
         if (fread(buf, sizeof(uint8_t), 512, diskfile)<512) {
             fclose(diskfile);
-            WriteOut(MSG_Get("PROGRAM_IMGMOUNT_INVALID_IMAGE"));
+            if (!qmount) WriteOut(MSG_Get("PROGRAM_IMGMOUNT_INVALID_IMAGE"));
             return false;
         }
         if (!strcmp((const char*)buf, "conectix")) {
@@ -5087,18 +5110,18 @@ private:
         fseeko64(diskfile, 0L, SEEK_SET);
         if (fread(buf, sizeof(uint8_t), 512, diskfile)<512) {
             fclose(diskfile);
-            WriteOut(MSG_Get("PROGRAM_IMGMOUNT_INVALID_IMAGE"));
+            if (!qmount) WriteOut(MSG_Get("PROGRAM_IMGMOUNT_INVALID_IMAGE"));
             return false;
         }
         fclose(diskfile);
         // check it is not dynamic VHD image
         if (!strcmp((const char*)buf, "conectix")) {
-            WriteOut(MSG_Get("PROGRAM_IMGMOUNT_DYNAMIC_VHD_UNSUPPORTED"));
+            if (!qmount) WriteOut(MSG_Get("PROGRAM_IMGMOUNT_DYNAMIC_VHD_UNSUPPORTED"));
             return false;
         }
         // check MBR signature for unknown images
         if (!yet_detected && ((buf[510] != 0x55) || (buf[511] != 0xaa))) {
-            WriteOut(MSG_Get("PROGRAM_IMGMOUNT_INVALID_GEOMETRY"));
+            if (!qmount) WriteOut(MSG_Get("PROGRAM_IMGMOUNT_INVALID_GEOMETRY"));
             return false;
         }
         // check MBR partition entry 1
